--- a/pubnative-interstitials/res/layout/pn_view_video_banner.xml
+++ b/pubnative-interstitials/res/layout/pn_view_video_banner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp" >
@@ -8,20 +8,44 @@
         android:id="@+id/view_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_centerInParent="true" />
 
     <ImageView
         android:id="@+id/view_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:adjustViewBounds="true" />
 
     <ImageView
         android:id="@+id/view_play"
-        android:src="@drawable/ic_play"
         android:layout_width="@dimen/play_button_size"
         android:layout_height="@dimen/play_button_size"
-        android:layout_gravity="center" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/pn_ic_play" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/view_mute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:src="@drawable/pn_ic_mute" />
+
+    <ImageView
+        android:id="@+id/view_full_screen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="8dp"
+        android:src="@drawable/pn_ic_full_screen" />
+
+    <TextView
+        android:id="@+id/view_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textStyle="bold" />
+
+</RelativeLayout>
