--- a/pubnative-library/res/layout/pn_view_video.xml
+++ b/pubnative-library/res/layout/pn_view_video.xml
@@ -4,7 +4,7 @@
     android:background="@android:color/black" >
 
     <TextureView
-        android:id="@+id/view_texture"
+        android:id="@+id/view_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true" />
