--- a/pubnative-interstitials/res/layout/pn_view_video_banner.xml
+++ b/pubnative-interstitials/res/layout/pn_view_video_banner.xml
@@ -39,12 +39,22 @@
         android:layout_margin="8dp"
         android:src="@drawable/pn_ic_full_screen" />
 
+    <net.pubnative.library.widget.CountDownView
+        android:id="@+id/view_count_down"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="8dp" />
+
     <TextView
         android:id="@+id/view_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/view_count_down"
         android:layout_alignParentBottom="true"
-        android:layout_margin="8dp"
+        android:paddingBottom="10dp"
+        android:layout_toRightOf="@id/view_count_down"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textStyle="bold" />
 
