--- a/pubnative-interstitials/res/layout/pn_view_video_banner.xml
+++ b/pubnative-interstitials/res/layout/pn_view_video_banner.xml
@@ -44,17 +44,15 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_margin="8dp" />
 
     <TextView
         android:id="@+id/view_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/view_count_down"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="10dp"
-        android:layout_toRightOf="@id/view_count_down"
+        android:layout_alignParentRight="true"
+        android:padding="10dp"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textStyle="bold" />
 
