--- a/pubnative-interstitials-demo/res/layout/activity_main.xml
+++ b/pubnative-interstitials-demo/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:gravity="center_horizontal"
     android:orientation="vertical" >
 
     <TextView
@@ -17,51 +16,75 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:src="@drawable/logo"
-        android:text="@string/settings"
-        android:textAppearance="@android:style/TextAppearance.Large.Inverse" />
+        android:src="@drawable/logo" />
+     
 
-    <Button
-        android:id="@+id/btn_interstitial"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/interstitial" />
+        android:padding="@dimen/button_margin" >
 
-    <Button
-        android:id="@+id/btn_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/banner" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/btn_list_item_brief"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/list_item_brief" />
+            <Button
+                android:id="@+id/btn_interstitial"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/interstitial" />
 
-    <Button
-        android:id="@+id/btn_list_item_full"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/list_item_full" />
+            <Button
+                android:id="@+id/btn_banner"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/banner" />
 
-    <Button
-        android:id="@+id/btn_carousel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/carousel" />
+            <Button
+                android:id="@+id/btn_list_item_brief"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/list_item_brief" />
 
-    <Button
-        android:id="@+id/btn_video_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/video_banner" />
+            <Button
+                android:id="@+id/btn_list_item_full"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/list_item_full" />
 
-    <Button
-        android:id="@+id/btn_in_feed_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/in_feed_video" />
+            <Button
+                android:id="@+id/btn_carousel"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/carousel" />
+
+            <Button
+                android:id="@+id/btn_video_banner"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/video_banner" />
+
+            <Button
+                android:id="@+id/btn_in_feed_video"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/in_feed_video" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
