--- a/pubnative-interstitials-demo/res/values/dimens.xml
+++ b/pubnative-interstitials-demo/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <dimen name="button_height">50dp</dimen>
+    <dimen name="button_width">150dp</dimen>
+    <dimen name="button_margin">10dp</dimen>
 
     <!-- Banner -->
     <dimen name="icon_size">60dp</dimen>
