--- a/pubnative-interstitials-demo/res/values/styles.xml
+++ b/pubnative-interstitials-demo/res/values/styles.xml
@@ -1,5 +1,11 @@
 <resources>
 
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.NoActionBar" />
+    <style name="AppTheme" parent="@android:style/Theme.Holo.NoActionBar" />
+
+    <style name="PubNative.Button" parent="@android:style/Widget.Button">
+        <item name="android:textAppearance">@android:style/TextAppearance.Medium</item>
+        <item name="android:background">@color/purple</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
 </resources>
