--- a/pubnative-interstitials-demo/res/layout/activity_main.xml
+++ b/pubnative-interstitials-demo/res/layout/activity_main.xml
@@ -38,6 +38,14 @@
                 android:text="@string/interstitial" />
 
             <Button
+                android:id="@+id/btn_video_interstitial"
+                style="@style/PubNative.Button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginTop="@dimen/button_margin"
+                android:text="@string/video_interstitial" />
+
+            <Button
                 android:id="@+id/btn_banner"
                 style="@style/PubNative.Button"
                 android:layout_width="@dimen/button_width"
