--- a/pubnative-interstitials/res/layout/pn_delegate_interstitial.xml
+++ b/pubnative-interstitials/res/layout/pn_delegate_interstitial.xml
@@ -4,18 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/pn_background" >
 
-    <ScrollView
+    <net.pubnative.interstitials.widget.InterstitialView
+        android:id="@+id/view_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never" >
-
-        <net.pubnative.interstitials.widget.InterstitialView
-            android:id="@+id/view_holder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-    </ScrollView>
-
+        android:layout_height="match_parent" >
+    </net.pubnative.interstitials.widget.InterstitialView>
+	
     <include
         android:layout_width="match_parent"
         android:layout_height="match_parent"
